--- a/scripts/cli/Makefile
+++ b/scripts/cli/Makefile
@@ -5,8 +5,8 @@ SCRIPTS := build_oscar_image_cli define_oscar_clients_cli \
 SUBDIRS := 
 
 doc:
-	install -d -m 0755 $(DESTDIR)/usr/local/man/man1/
-	for bin in ${SCRIPTS} ; do ( pod2man --section=1 $$bin $(DESTDIR)/usr/local/man/man1/$$bin.1 ) ; done
+	install -d -m 0755 $(DESTDIR)$(MANDIR)/man1/
+	for bin in ${SCRIPTS} ; do ( pod2man --section=1 $$bin $(DESTDIR)$(MANDIR)/man1/$$bin.1 ) ; done
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
