[scripts/cli/Makefile] Need to include $(TOPDIR)/Config.mk (need $(MANDIR))
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9560 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: fff453ee85c5410496a6d48a923af94e40c1a9c3

--- a/scripts/cli/Makefile
+++ b/scripts/cli/Makefile
@@ -1,4 +1,7 @@
 DESTDIR=
+TOP_DIR = ../..
+include $(TOP_DIR)/Config.mk
+
 
 SCRIPTS := build_oscar_image_cli define_oscar_clients_cli \
 		configurator_cli main_cli modules.used simple_complete.pl
