[torque: all] Full upgrade to v4.1.4 + major rewrite of script and opkg.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9565 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b5600fef9f1c105dc550664fcb4bda265f06c83b

--- a/packages/torque/SRPMS/build.cfg
+++ b/packages/torque/SRPMS/build.cfg
@@ -1,9 +1,9 @@
 [rhel*:*:*]
 requires: pam tk-devel tcl-devel tclx-devel pam-devel gcc gcc-c++
-common: torque --target noarch
-torque
+common: torque-oscar --target noarch
+torque-oscar
 
 [*:*:*]
 requires: pam tk-devel tcl-devel tclx-devel pam-devel gcc gcc-c++
-common: torque --target noarch
-torque
+common: torque-oscar --target noarch
+torque-oscar
