[openmpi-oscar] Update to 1.6.3 (Is SRPMS still required???)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9571 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: aa42f78f46fe9d8df5220557d8444adb7af7c02c

--- a/packages/openmpi/SRPMS/build.cfg
+++ b/packages/openmpi/SRPMS/build.cfg
@@ -24,6 +24,15 @@ requires: torque:torque
 openmpi-oscar --define "configure_options FC=gfortran --with-tm=/opt/pbs" --define "install_in_opt 1" --define "_name openmpi-oscar" --define "install_shell_scripts 1" --define "install_modulefile 1" --define "use_mpi_selector 1" --define "allow_fortify_source 0" --define "modules_rpm_name modules-oscar"
 #openmpi-oscar --define "configure_options FC=gfortran --with-tm=/opt/pbs --with-blcr=yes --with-ft=cr --with-openib" --define "install_in_opt 1" --define "ofed 1" --define "_name openmpi-oscar" --define "install_shell_scripts 1" --define "install_modulefile 1" --define "use_mpi_selector 1" --define "allow_fortify_source 0" --define "modules_rpm_name modules-oscar"
 
+[rhel:6:*]
+requires: gcc-gfortran
+requires: blcr-devel libibverbs-devel
+requires: switcher:modules-oscar
+common: openmpi-oscar --target noarch --define "configure_options FC=gfortran --with-tm=/opt/pbs --with-blcr=yes --with-ft=cr  --with-openib" --define "install_in_opt 1" --define "ofed 1" --define "_name openmpi-oscar" --define "install_shell_scripts 1" --define "install_modulefile 1" --define "use_mpi_selector 1" --define "allow_fortify_source 0" --define "modules_rpm_name modules-oscar"
+common: openmpi-switcher-modulefile
+requires: torque:torque
+openmpi-oscar --define "configure_options FC=gfortran --with-tm=/opt/pbs --with-blcr=yes --with-ft=cr --with-openib" --define "install_in_opt 1" --define "ofed 1" --define "_name openmpi-oscar" --define "install_shell_scripts 1" --define "install_modulefile 1" --define "use_mpi_selector 1" --define "allow_fortify_source 0" --define "modules_rpm_name modules-oscar"
+
 [*:*:*]
 requires: switcher:modules-oscar
 common: openmpi-switcher-modulefile --target noarch
