[ganglia: build.cfg] add specific section for rhel-6
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9598 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 080d91f7931a035494139f87ff986b7a515973f1

--- a/packages/ganglia/SRPMS/build.cfg
+++ b/packages/ganglia/SRPMS/build.cfg
@@ -8,6 +8,11 @@ requires: rrdtool
 common: ganglia --target noarch
 ganglia
 
+[rhel:6:*]
+requires: rrdtool
+common: ganglia --target noarch
+ganglia
+
 [*:*:*]
 requires: php-devel
 requires: libpng-devel
