--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -241,6 +241,25 @@ xinetd
 xmlstarlet
 sh: $OSCAR_HOME/scripts/system-sanity
 
+[ubuntu:1210:*]
+!tftpd
+apache2
+dpkg-dev
+isc-dhcp-server
+libdbi-perl
+libdbd-mysql-perl
+libmldbm-perl
+libxml-simple-perl
+mysql-server
+perl-tk
+mysql-common
+nfs-kernel-server
+debootstrap
+tcpdump
+xinetd
+xmlstarlet
+sh: $OSCAR_HOME/scripts/system-sanity
+
 # It is important to leave the generic block AFTER the specific ones.
 # For instance, [ubuntu:*:*] should be AFTER [ubuntu:1004:*]
 [ubuntu:*:*]
