[*.cfg */Makefile] Update new source URL http://svn.oscar.openclustergroup.org/pkgs/downloads/
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9605 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: a193a0ec6a28a9c05ccf9087c84850c8e21afede

--- a/packages/apitest/SRPMS/apitest.cfg
+++ b/packages/apitest/SRPMS/apitest.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/apitest-1.0.0-12.3.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/apitest-1.0.0-12.3.src.rpm
