--- a/packages/apitest/SRPMS/python-elementtree.cfg
+++ b/packages/apitest/SRPMS/python-elementtree.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/python-elementtree-1.2.6-4.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/python-elementtree-1.2.6-4.src.rpm
