--- a/packages/ganglia/SRPMS/rrdtool.cfg
+++ b/packages/ganglia/SRPMS/rrdtool.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/rrdtool-1.4.7-1.rf.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/rrdtool-1.4.7-1.rf.src.rpm
