--- a/packages/loghost/SRPMS/loghost.cfg
+++ b/packages/loghost/SRPMS/loghost.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/loghost-1.0-1.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/loghost-1.0-1.src.rpm
