--- a/packages/pfilter/SRPMS/pfilter.cfg
+++ b/packages/pfilter/SRPMS/pfilter.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/pfilter-1.707-3oscar.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/pfilter-1.707-3oscar.src.rpm
