--- a/packages/sge/SRPMS/sge.cfg
+++ b/packages/sge/SRPMS/sge.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/sge-6.1u3-1oscar.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/sge-6.1u3-1oscar.src.rpm
