--- a/share/prereqs/perl-HTML-Tree/SRPMS/perl-HTML-Tree.cfg
+++ b/share/prereqs/perl-HTML-Tree/SRPMS/perl-HTML-Tree.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/perl-HTML-Tree-3.23-1.rf.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/perl-HTML-Tree-3.23-1.rf.src.rpm
