--- a/share/prereqs/perl-Qt/SRPMS/perl-Qt.cfg
+++ b/share/prereqs/perl-Qt/SRPMS/perl-Qt.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/perl-Qt-3.009b2-7.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/perl-Qt-3.009b2-7.src.rpm
