--- a/share/prereqs/perl-Tk/SRPMS/perl-Tk.cfg
+++ b/share/prereqs/perl-Tk/SRPMS/perl-Tk.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/perl-Tk-804.026-1.oscar.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/perl-Tk-804.026-1.oscar.src.rpm
