--- a/packages/openmpi/SRPMS/openmpi-oscar.cfg
+++ b/packages/openmpi/SRPMS/openmpi-oscar.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/openmpi-1.6.3-1.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/openmpi-1.6.3-1.src.rpm
