--- a/packages/pvm/SRPMS/pvm.cfg
+++ b/packages/pvm/SRPMS/pvm.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/pvm-3.4.5+6-2.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/pvm-3.4.6-1.src.rpm
