--- a/share/prereqs/perl-XML-Simple/SRPMS/perl-XML-Simple.cfg
+++ b/share/prereqs/perl-XML-Simple/SRPMS/perl-XML-Simple.cfg
@@ -1,1 +1,1 @@
-source = wget, http://www.csm.ornl.gov/srt/downloads/oscar/perl-XML-Simple-2.14-2.rf.src.rpm
+source = wget, http://svn.oscar.openclustergroup.org/pkgs/downloads/perl-XML-Simple-2.14-2.rf.src.rpm
