[rpm: repos] Add a mirror file. Updated oscar.repo consequently.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9622 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: ef04207993344f09af5be1c4ba64b4c08e25cfd6

--- a/rpm/oscar.repo.in
+++ b/rpm/oscar.repo.in
@@ -7,7 +7,7 @@
 
 [oscar]
 name=OSCAR - ##OSCAR_VERSION##
-mirrorlist= ##URL##.mirrors.txt
+mirrorlist= http://svn.oscar.openclustergroup.org/oscar/trunk/rpm/oscar.mirrors.txt
 #baseurl=##URL##
 gpgcheck=0
 enable=1
