[oscar-utils] Created a new package to host scripts that needs to be on client nodes Need: distro-query is required by yume which can be run from client (cexec yume -y update) This avoids installing all oscar binaries that have nothing to do on client nodes. This change affects rpm based distros and debian based distros to keep concistency.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9672 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: fe059afff6e5ae3938273413e1557646e68052a6

--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,12 @@ Description: Binaries for OSCAR
  Set of binaries for OSCAR
 Depends: liboscar
 
+Package: oscar-utils
+Architecture: all
+Description: Utils for OSCAR (head and clients)
+ Set of utilities for OSCAR (head and clients nodes)
+Depends: liboscar
+
 Package: liboscar
 Architecture: all
 Description: Libraries for OSCAR 
