[oscar:oscar.repo.in] disabled mirrors (no $distro variable => need per-distro mirror file)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9827 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 5ed8df4e849c8e5df4c600f65c27797ef9fb5742

--- a/rpm/oscar.repo.in
+++ b/rpm/oscar.repo.in
@@ -7,8 +7,8 @@
 
 [oscar]
 name=OSCAR - ##OSCAR_VERSION##
-mirrorlist= http://svn.oscar.openclustergroup.org/oscar/trunk/rpm/oscar.mirrors.txt
-#baseurl=##URL##
+#mirrorlist= http://svn.oscar.openclustergroup.org/oscar/trunk/rpm/oscar.mirrors.txt
+baseurl=##URL##
 gpgcheck=0
 enable=1
 #gpgkey=http://mirror.centos.org/centos/RPM-GPG-KEY-CentOS-5
