[oscar:templates/oscar.conf] Add entry for PACKAGER_DOWNLOAD_PATH
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@9904 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: efbb0bd512b9f0c6f1cee152cbca6bdadf923fb3

--- a/share/etc/templates/oscar.conf
+++ b/share/etc/templates/oscar.conf
@@ -40,3 +40,6 @@ OPKGS_PATH = packages
 
 # Specify where the flat file ODA configuration file are
 PATH_ODA_CONFIG_FILES = /etc/oscar/clusters
+
+# Specify where oscar-packager will download files
+PACKAGER_DOWNLOAD_PATH = /var/lib/oscar-packager/downloads
