[oscar-base:set_node_nics] Fix set_node_nics. use /usr/bin/ip instead of ifconfig. (ifconfig output has changed and parsing was broken). Use perl::Net::IPv4Addr to ease cidr netmask conversion.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10045 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 9d4d16a930afaec373ad66030fb3327444e9599f

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Package: oscar-bin
 Architecture: all
 Description: Binaries for OSCAR
  Set of binaries for OSCAR
-Depends: liboscar
+Depends: liboscar, libnetwork-ipv4addr-perl
 
 Package: oscar-utils
 Architecture: all
