[oscar:OSCAR/Network.pm] Fix network interface parsing (move from ifconfig to ip addr show). Ticket #624
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10046 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: fcf1b1f0dff0259507b3b9fc06f68f36fccd4c17

--- a/debian/control
+++ b/debian/control
@@ -32,6 +32,7 @@ Depends: liboscar
 Package: liboscar
 Architecture: all
 Description: Libraries for OSCAR 
+Depends: libnetwork-ipv4addr-perl
  Set of libraries for OSCAR
 
 Package: oscar-base-server
