[oscar:package_sets] Update + Add support for debian-6-x86_64, debian-7-x86_64, fedora-17+-x86_64
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10062 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 79da6b9611389c455da94b82d09d1051ebd5a89d

--- a/share/package_sets/Experimental/Makefile
+++ b/share/package_sets/Experimental/Makefile
@@ -3,10 +3,15 @@ SHAREDIR=usr/share/oscar/package_sets/$(NAME)
 
 SUBDIRS := 
 
-FILES :=	debian-4-i386.xml debian-4-x86_64.xml \
-		                  debian-5-x86_64.xml \
-		rhel-5-i386.xml   rhel-5-x86_64.xml \
-		rhel-6-i386.xml   rhel-6-x86_64.xml
+FILES :=	debian-4-i386.xml 	debian-4-x86_64.xml \
+		                  	debian-5-x86_64.xml \
+		                  	debian-6-x86_64.xml \
+		                  	debian-7-x86_64.xml \
+		rhel-5-i386.xml   	rhel-5-x86_64.xml \
+		rhel-6-i386.xml   	rhel-6-x86_64.xml \
+					fc-17-x86_64.xml \
+					fc-18-x86_64.xml \
+					fc-19-x86_64.xml
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
