[OSCAR:OS_Settings] Added _services variables (support for new SystemServices.pm) Updated configs for hopefully all supported distros (rhel6, debian-6,7, fedora-17,18,19, ubuntu-1204,1210,1304)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10064 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: e3e521a0d8ccb4e196f748ed92df9a2e31d3918e

--- a/lib/OSCAR/OCA/OS_Settings/Makefile
+++ b/lib/OSCAR/OCA/OS_Settings/Makefile
@@ -3,7 +3,7 @@ TOP_LIB_DIR = ../../..
 include $(TOP_LIB_DIR)/Config.mk
 
 SUBDIRS := 
-FILES := default debian fedora7 suse ubuntu1204
+FILES := default debian fedora suse ubuntu1204
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
