[oscarsamples/Makefile] enabled fedora-17+ rpmlists
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10115 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 7fbe143a806e6ceea55c7ef67429f8016c518bc7

--- a/oscarsamples/Makefile
+++ b/oscarsamples/Makefile
@@ -11,7 +11,11 @@ FILES := debian-4-i386.rpmlist debian-4-x86_64.rpmlist \
 	fc-6-i386.rpmlist \
 	fc-7-i386.rpmlist fc-7-x86_64.rpmlist \
 	fc-8-i386.rpmlist fc-8-x86_64.rpmlist \
-	fc-9-x86_64.rpmlist fc-10-x86_64.rpmlist \
+	                  fc-9-x86_64.rpmlist \
+	                  fc-10-x86_64.rpmlist \
+	                  fedora-17-x86_64.rpmlist \
+	                  fedora-18-x86_64.rpmlist \
+	                  fedora-19-x86_64.rpmlist \
 	rhel-3-i386.rpmlist rhel-3-ia64.rpmlist rhel-3-x86_64.rpmlist \
 	rhel-3u2-i386.rpmlist rhel-3u2-ia64.rpmlist \
 	rhel-4-i386.rpmlist rhel-4-ia64.rpmlist rhel-4-x86_64.rpmlist \
@@ -22,7 +26,8 @@ FILES := debian-4-i386.rpmlist debian-4-x86_64.rpmlist \
 	scientific_linux-5-i386.rpmlist scientific_linux-5-x86_64.rpmlist \
 	scientific_linux-6-i386.rpmlist scientific_linux-6-x86_64.rpmlist \
 	suse-10.0-i386.rpmlist suse-10.0-x86_64.rpmlist \
-	suse-10.2-x86_64.rpmlist suse-10.3-x86_64.rpmlist \
+	                       suse-10.2-x86_64.rpmlist \
+	                       suse-10.3-x86_64.rpmlist \
 	mdv-2006-i386.rpmlist \
 	ydl-5-ppc64.rpmlist \
 	ide-pata.disk ide-sata.disk \
