[oscar: OS support] Add initial SuSE-12.3 support (still need work)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10117 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 77463da7fad94eea00051be42b0c3d09b79bb617

--- a/oscarsamples/Makefile
+++ b/oscarsamples/Makefile
@@ -28,6 +28,7 @@ FILES := debian-4-i386.rpmlist debian-4-x86_64.rpmlist \
 	suse-10.0-i386.rpmlist suse-10.0-x86_64.rpmlist \
 	                       suse-10.2-x86_64.rpmlist \
 	                       suse-10.3-x86_64.rpmlist \
+	                       suse-12.3-x86_64.rpmlist \
 	mdv-2006-i386.rpmlist \
 	ydl-5-ppc64.rpmlist \
 	ide-pata.disk ide-sata.disk \
