[oscar] migration from /var/lib/oscar/{packages,testing} to /usr/lib/oscar
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10204 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: afb01b7a62b84db71f11fec324c4b51511c1ddba

--- a/testing/wizard_tests/helpers/Makefile
+++ b/testing/wizard_tests/helpers/Makefile
@@ -1,8 +1,8 @@
 DESTDIR=
-INSTALLDIR=/usr/lib/oscar/testing/
+INSTALLDIR=/usr/lib/oscar/testing/wizard_tests/helpers
 
-SUBDIRS := unit_testing wizard_tests
-SCRIPTS := run_unit_test testprint test_cluster ssh_user_tests
+SUBDIRS := 
+SCRIPTS := oscar_nodes.sh create_oscartst.sh
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
