[oscar-base.spec.in] Remove ingore non packaged files.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10212 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: e5804e77ac71502ccf9537edde31729a3998dc0c

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -1,6 +1,6 @@
 # $Id$
 
-%define _unpackaged_files_terminate_build 0
+#define _unpackaged_files_terminate_build 0
 
 %define opkgc_version 0.6.0
 %define packman_version 3.2.0
