[oscar/tests/Makefile] Added true.apt so it's included in the install
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10240 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 7c10c4a5ba0f57e8e02a456ddfb97e65ea813a63

--- a/testing/wizard_tests/Makefile
+++ b/testing/wizard_tests/Makefile
@@ -6,7 +6,7 @@ SCRIPTS := all_nodes_up.apt before_step_2.apb before_step_5.apb before_step_8.ap
            home_mounts_ok.apt SELinux_disabled.apt ssh_user_tests.apb before_step_0.apb \
            before_step_3.apb  before_step_6.apb  before_step_9.apb  IPV6_disabled.apt \
            ssh_node_to_server.apt  template_batch.apb before_step_1.apb  before_step_4.apb \
-           before_step_7.apb ssh_server_to_node.apt template_test.apt
+           before_step_7.apb ssh_server_to_node.apt template_test.apt true.apt
 
 all:
 	for dir in ${SUBDIRS} ; do ( cd $$dir ; ${MAKE} all ) ; done
