[oscar/lib/Makefile] Disabled Qt (not used at the moment and the code is Qt3 bassed and thus not compatible with Qt4)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10290 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b1a38977be9967300629bf3bd78d4b4d49222fe8

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -3,7 +3,8 @@ DESTDIR=
 TOPDIR = .
 include $(TOPDIR)/Config.mk
 
-SUBDIRS := OSCAR Qt Tk
+#SUBDIRS := OSCAR Qt Tk
+SUBDIRS := OSCAR Tk
 
 FILES := 
 
