[oscar-base.spec.in] removed Requires: perl-Net-IPv4Addr as automatic deps should do this for us: 'perl(Net::IPv4Addr)'
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10291 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: d5e86d67c9b00b882a694227251e777c20c7a735

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -129,7 +129,7 @@ Requires: %{name}-base-lib == %{version}-%{release}
 Requires: %{name}-base == %{version}-%{release}
 Requires: iproute
 Requires: syslinux
-Requires: perl-Net-IPv4Addr
+#Requires: perl-Net-IPv4Addr
 
 %description -n oscar-base-scripts
 Scripts for OSCAR clustering base package.
