[oscar-base.spec.in] exclude 2 broken files osm.pm and psm.pm which use non existent opd2 package
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10304 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 8e651674ed75f3158849734d5e2090449303ae74

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -121,6 +121,8 @@ Libraries for OSCAR clustering base package.
 %files -n oscar-base-lib
 %defattr(-,root,root)
 %{perl_vendorlib}/*
+%exclude %{perl_vendorlib}/OSCAR/osm.pm
+%exclude %{perl_vendorlib}/OSCAR/psm.pm
 
 %package -n oscar-base-scripts
 Group: Applications/System
