[oscar-base.spec.in] Fix oscar-base Requires(post) so command are installed before attempting to run them.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@10308 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 5654f97a66d90c0e748c6f70adcbd0c9d27ca817

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -58,6 +58,7 @@ bootstrap using RPMs.
 Group: Applications/System
 Summary: Base OSCAR package
 Requires: oscar-base-scripts == %{version}-%{release}
+Requires(post): %{name}-base-scripts == %{version}-%{release}
 # systeminstaller-oscar is handeled by prereqs, but this needs to be here
 # for rpm compliance (shouldn't be possible to install a package with missing deps)
 Requires: systeminstaller-oscar
